[package]
name = "basic_transfer_actor"
version = "0.1.0"
edition = "2021"

[dependencies]
cid = { version = "0.8.5", default-features = false }
frc46_token = { version = "1.1.0", path = "../../../../frc46_token" }
frc42_dispatch = { path = "../../../../frc42_dispatch" }
fvm_actor_utils = { version = "0.1.0", path = "../../../../fvm_actor_utils" }
fvm_ipld_blockstore = { version = "0.1.1" }
fvm_ipld_encoding = { version = "0.2.2" }
fvm_sdk = { version = "2.0.0" }
fvm_shared = { version = "2.0.0" }
serde = { version = "1.0.136", features = ["derive"] }
serde_tuple = { version = "0.5.0" }

[build-dependencies]
substrate-wasm-builder = "4.0"
