[package]
name = "frc46_test_actor"
version = "0.1.0"
edition = "2021"

[dependencies]
frc46_token = { path = "../../../../frc46_token" }
frc42_dispatch = { path = "../../../../frc42_dispatch" }
frc53_nft = { path = "../../../../frc53_nft" }
fvm_actor_utils = { path = "../../../../fvm_actor_utils" }

cid = { version = "0.8.5", default-features = false }
fvm_ipld_blockstore = { version = "0.1.1" }
fvm_ipld_encoding = "~0.3"
fvm_sdk = "~3.0"
fvm_shared = { version = "~3.0" }
serde = { version = "1.0", features = ["derive"] }
serde_tuple = { version = "0.5.0" }

[build-dependencies]
substrate-wasm-builder = "4.0"
