[package]
name = "frc46_test_actor"
version = "0.1.0"
edition = "2021"

[dependencies]
frc46_token = { path = "../../../../frc46_token" }
frc42_dispatch = { path = "../../../../frc42_dispatch" }
frc53_nft = { path = "../../../../frc53_nft" }
fvm_actor_utils = { path = "../../../../fvm_actor_utils" }

cid = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_sdk = { workspace = true }
fvm_shared = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_tuple = { version = "0.5.0" }

[build-dependencies]
substrate-wasm-builder = "4.0"
