[package]
name = "frcxx_test_actor"
version = "0.1.0"
edition = "2021"

[dependencies]
frc46_token = { path = "../../../../frc46_token" }
fvm_actor_utils = { path = "../../../../fvm_actor_utils" }
frc42_dispatch = { path = "../../../../frc42_dispatch" }
frcxx_nft = { path = "../../../../frcxx_nft" }

cid = { version = "0.8.5", default-features = false }
fvm_ipld_blockstore = { version = "0.1.1" }
fvm_ipld_encoding = "=0.3.2"
fvm_sdk = { version = "3.0.0-alpha.21" }
fvm_shared = { version = "3.0.0-alpha.14" }
serde = { version = "1.0", features = ["derive"] }
serde_tuple = { version = "0.5.0" }

[build-dependencies]
wasm-builder = "3.0"
