[package]
name = "basic_receiving_actor"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
frc42_dispatch = { workspace = true }
frc46_token = { workspace = true }
frc53_nft = { workspace = true }
fvm_actor_utils = { workspace = true }

fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_sdk = { workspace = true }
fvm_shared = { workspace = true }

[lib]
crate-type = ["cdylib"] ## cdylib is necessary for Wasm build
